welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
	return (if (die1 == die2 && noDoubles) if (die==6) die1+die2 - 5 else die1+die2 +1 else die1 +die 2 )
}
